// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`complex.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
- hello:    world
-         123
---

# something

=====================================output=====================================
---
- hello: world
- 123
---

# something

================================================================================
`;

exports[`empty.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
---

=====================================output=====================================
---
---

================================================================================
`;

exports[`empty-2.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
---

Content

=====================================output=====================================
---
---

Content

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
hello: world
---

=====================================output=====================================
---
hello: world
---

================================================================================
`;

exports[`simple-2.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
hello: world
---

Content

=====================================output=====================================
---
hello: world
---

Content

================================================================================
`;

exports[`trailing-spaces.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
---
           v spaces
---         

This paragraph should be considered part of the _markdown_ instead of *yaml*.

---

=====================================output=====================================
---
v spaces
---

This paragraph should be considered part of the _markdown_ instead of _yaml_.

---

================================================================================
`;
